--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="BRIGHTWEB.css" />
+  <link rel="stylesheet" href="style.css" />
   <title>BRIGHTWEB MARKETING</title>
 </head>
 
@@ -78,7 +78,7 @@
       </div>
     </section>
   </main>
-  <script src="BRIGHTWEB.JS"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
